Pesquisa cerveja/estilos. Phone Number Mask.

--- a/src/main/resources/templates/layout/LayoutPadrao.html
+++ b/src/main/resources/templates/layout/LayoutPadrao.html
@@ -39,6 +39,8 @@
 
 <script th:src="@{/layouts/javascripts/vendors/jquery.maskMoney.min.js}"></script>
 
+<script th:src="@{/layouts/javascripts/vendors/jquery.mask.min.js}"></script>
+
 <script th:src="@{/layouts/javascripts/brewer.js}"></script>
 
 <th:block layout:fragment="javascript-extra"></th:block>
