--- a/src/main/resources/templates/cerveja/PesquisaCervejas.html
+++ b/src/main/resources/templates/cerveja/PesquisaCervejas.html
@@ -30,22 +30,22 @@
     </div>
 
     <div class="container-fluid">
-        <form method="GET">
+        <form method="GET" th:object="${cervejaFilter}">
             <div class="row">
                 <div class="col-sm-2  form-group">
                     <label for="sku" class="control-label">S.K.U.</label>
-                    <input id="sku" type="text" class="form-control" />
+                    <input id="sku" type="text" class="form-control" th:field="*{sku}"/>
                 </div>
                 <div class="col-sm-10  form-group">
                     <label for="nome" class="control-label">Nome</label>
-                    <input id="nome" type="text" class="form-control"/>
+                    <input id="nome" type="text" class="form-control" th:field="*{nome}"/>
                 </div>
             </div>
             <div class="row" >
                 <div class="col-sm-3  form-group">
                     <label for="estilo" class="control-label" >Estilo</label>
                     <div class="bw-field-action">
-                        <select id="estilo" class="form-control" >
+                        <select id="estilo" class="form-control" th:field="*{estilo}">
                             <option value="">Todos os Estilos</option>
                             <option th:each="estilo : ${estilos}" th:value="${estilo.codigo}" th:text="${estilo.nome}"></option>
                         </select>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col-sm-3  form-group">
                     <label for="sabor" class="control-label" >Sabor</label>
-                    <select id="sabor" class="form-control">
+                    <select id="sabor" class="form-control" th:field="*{sabor}">
                         <option value="">Todos os Sabores</option>
                         <option th:each="sabor : ${sabores}" th:value="${sabor}" th:text="${sabor.descricao}"></option>
                     </select>
@@ -70,7 +70,7 @@
                     <div>
                         <th:block th:each="origem : ${origens}">
                             <div class="radio radio-inline">
-                                <input th:id="|id_${origem}|" th:value="${origem}" name="origem" type="radio" class="form-control"/>
+                                <input th:id="|id_${origem}|" th:value="${origem}" th:field="*{origem}" type="radio" class="form-control"/>
                                 <label th:for="|id_${origem}|" th:text="${origem.descricao}" ></label>
                             </div>
                         </th:block>
@@ -83,9 +83,9 @@
                 <div class="col-sm-6  form-group">
                     <label>Preço Unitário:</label>
                     <div class="form-inline">
-                        <input id="valor0" type="text" class="form-control  js-decimal"/>
+                        <input id="valorDe" type="text" class="form-control  on-form-control  js-decimal" th:field="*{valorDe}"/>
                         <label>até:</label>
-                        <input id="valor1" type="text" class="form-control  js-decimal"/>
+                        <input id="valorAte" type="text" class="form-control  on-form-control  js-decimal" th:field="*{valorAte}"/>
                     </div>
                 </div>
             </div>
@@ -96,8 +96,13 @@
                 <thead>
                     <tr>
                         <th class="table-cervejas-col-foto"></th>
-                        <th class="table-cervejas-col-sku">SKU</th>
-                        <th class="table-cervejas-col-nome">Nome</th>
+                        <th class="table-cervejas-col-sku">
+                            <!--<th:block th:replace="layout/fragments/Ordenacao :: order (${pagina}, 'sku', 'SKU')"></th:block>-->
+                            <brewer:order page="${pagina}" field="sku" text="SKU"/>
+                        </th>
+                        <th class="table-cervejas-col-nome">
+                            <brewer:order page="${pagina}" field="nome" text="Nome"/>
+                        </th>
                         <th class="table-cervejas-col-estilo">Estilo</th>
                         <th class="table-cervejas-col-origem">Origem</th>
                         <th class="table-cervejas-col-valor">Valor</th>
@@ -105,9 +110,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="cerveja: ${cervejas}">
+                    <tr th:each="cerveja: ${pagina.conteudo }">
                         <td class="text-center">
-                            <img th:src="@{/fotos/temp/{foto}(foto=${cerveja.foto})}" class="img-responsive">
+                            <img th:src="@{/fotos/thumbnail-{foto}(foto=${cerveja.fotoOuMock})}" class="img-responsive">
                         </td>
                         <td class="text-center" th:text="${cerveja.sku}"></td>
                         <td th:text="${cerveja.nome}"></td>
@@ -123,8 +128,24 @@
                             </a>
                         </td>
                     </tr>
+                <tr th:if="${#lists.isEmpty(pagina.conteudo)}">
+                    <td colspan="7">Nenhuma cerveja encontrada</td>
+                </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="col-sm-12  text-center" th:if="${not #lists.isEmpty(pagina.conteudo)}">
+            <ul class="pagination  pagination-sm" th:with="paginaAtual=${pagina.atual}">
+                <li class="page-item" th:class="${pagina.primeira} ? disabled">
+                    <a th:href="${pagina.urlParaPaginna(paginaAtual - 1)}" class="page-link" th:remove="${pagina.primeira} ? all"><span>&laquo;</span> </a>
+                </li>
+                <th:block th:each="p : ${#numbers.sequence(1, pagina.total)}" th:with="indicePagina=${p -1}">
+                    <li th:class="${paginaAtual}==${indicePagina} ? active" ><a th:href="${pagina.urlParaPaginna(indicePagina)}">[[${p}]]</a></li>
+                </th:block>
+                <li class="page-item" th:class="${pagina.ultima} ? disabled">
+                    <a th:href="${pagina.urlParaPaginna(paginaAtual + 1)}" class="page-link" th:remove="${pagina.ultima} ? tag" ><span>&raquo;</span></a>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
